force-app/main/default/objects/Risk_Assessment__c/Risk_Assessment__c.object-meta.xml
<CustomObject>
    <description>Stores privacy, compliance, and security risk assessments for GenAI requests.</description>
    <label>Risk Assessment</label>
    <nameField>
        <displayFormat>RA-{0000}</displayFormat>
        <label>Risk Assessment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Assessments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>