force-app/main/default/objects/Risk_Assessment__c/fields/Assessment_Status__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Status__c</fullName>
    <label>Assessment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>true</default><label>Pending</label></value>
            <value><fullName>Passed</fullName><default>false</default><label>Passed</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>