force-app/main/default/objects/Risk_Assessment__c/fields/GenAI_Request__c.field-meta.xml
<CustomField>
    <fullName>GenAI_Request__c</fullName>
    <label>GenAI Request</label>
    <referenceTo>GenAI_Request__c</referenceTo>
    <relationshipLabel>Risk Assessments</relationshipLabel>
    <relationshipName>Risk_Assessments</relationshipName>
    <type>MasterDetail</type>
</CustomField>