force-app/main/default/objects/Risk_Assessment__c/fields/Privacy_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Risk_Level__c</fullName>
    <label>Privacy Risk Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Low</fullName><default>true</default><label>Low</label></value>
            <value><fullName>Medium</fullName><default>false</default><label>Medium</label></value>
            <value><fullName>High</fullName><default>false</default><label>High</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>