force-app/main/default/objects/Risk_Assessment__c/fields/Risk_Comment__c.field-meta.xml
<CustomField>
    <fullName>Risk_Comment__c</fullName>
    <label>Risk Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>