force-app/main/default/objects/Risk_Assessment__c/fields/Security_Review_Required__c.field-meta.xml
<CustomField>
    <fullName>Security_Review_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Security Review Required</label>
    <type>Checkbox</type>
</CustomField>