force-app/main/default/objects/Risk_Assessment__c/listViews/All_Risk_Assessments.listView-meta.xml
<ListView>
    <fullName>All_Risk_Assessments</fullName>
    <columns>NAME</columns>
    <columns>GenAI_Request__c</columns>
    <columns>Assessment_Status__c</columns>
    <columns>Privacy_Risk_Level__c</columns>
    <columns>Compliance_Risk_Level__c</columns>
    <columns>Security_Review_Required__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Risk Assessments</label>
</ListView>