force-app/main/default/objects/Risk_Assessment__c/listViews/Failed_Risk_Assessments.listView-meta.xml
<ListView>
    <fullName>Failed_Risk_Assessments</fullName>
    <columns>NAME</columns>
    <columns>GenAI_Request__c</columns>
    <columns>Assessment_Status__c</columns>
    <columns>Privacy_Risk_Level__c</columns>
    <columns>Compliance_Risk_Level__c</columns>
    <columns>Security_Review_Required__c</columns>
    <filters>
        <field>Assessment_Status__c</field>
        <operation>equals</operation>
        <value>Failed</value>
    </filters>
    <filterScope>Everything</filterScope>
    <label>Failed Risk Assessments</label>
</ListView>